# conda-global

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  release.yml  tests.yml
conda_global/: __init__.py  __main__.py  binaries.py  envs.py  exceptions.py  manifest.py  models.py  paths.py  plugin.py  trampolines.py
conda_global/cli/: __init__.py  add.py  edit.py  ensurepath.py  expose.py  install.py  list.py  main.py  pin.py  remove.py  run.py  status.py  sync.py  tree.py  uninstall.py  update.py
demos/: expose-hide.tape  pin-update.tape  quickstart.tape  run.tape  sync.tape  tree.tape
docs/: conf.py  configuration.md  features.md  index.md  motivation.md  quickstart.md
docs/_build/dirhtml/: .buildinfo  .buildinfo.bak  configuration.html  features.html  genindex.html  index.html  motivation.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/dirhtml/.doctrees/: configuration.doctree  environment.pickle  features.doctree  index.doctree  motivation.doctree  quickstart.doctree
docs/_build/dirhtml/.doctrees/guides/: managing-tools.doctree  sharing-manifests.doctree
docs/_build/dirhtml/.doctrees/reference/: cli.doctree
docs/_build/dirhtml/.doctrees/tutorials/: coming-from-homebrew.doctree  coming-from-pipx.doctree  coming-from-pixi-global.doctree  first-tool.doctree  index.doctree  run-without-installing.doctree
docs/_build/dirhtml/.doctrees/tutorials/coming-from/: homebrew.doctree  index.doctree  pipx.doctree  pixi-global.doctree
docs/_build/dirhtml/_sources/: configuration.md.txt  features.md.txt  index.md.txt  motivation.md.txt  quickstart.md.txt
docs/_build/dirhtml/_sources/guides/: managing-tools.md.txt  sharing-manifests.md.txt
docs/_build/dirhtml/_sources/reference/: cli.md.txt
docs/_build/dirhtml/_sources/tutorials/: first-tool.md.txt  index.md.txt  run-without-installing.md.txt
docs/_build/dirhtml/_sources/tutorials/coming-from/: homebrew.md.txt  index.md.txt  pipx.md.txt  pixi-global.md.txt
docs/_build/dirhtml/_static/css/: custom.css
docs/_build/dirhtml/configuration/: index.html
docs/_build/dirhtml/features/: index.html
docs/_build/dirhtml/genindex/: index.html
docs/_build/dirhtml/guides/: managing-tools.html  sharing-manifests.html
docs/_build/dirhtml/guides/managing-tools/: index.html
docs/_build/dirhtml/guides/sharing-manifests/: index.html
docs/_build/dirhtml/motivation/: index.html
docs/_build/dirhtml/quickstart/: index.html
docs/_build/dirhtml/reference/: cli.html
docs/_build/dirhtml/reference/cli/: index.html
docs/_build/dirhtml/search/: index.html
docs/_build/dirhtml/tutorials/: coming-from-homebrew.html  coming-from-pipx.html  coming-from-pixi-global.html  first-tool.html  index.html  run-without-installing.html
docs/_build/dirhtml/tutorials/coming-from/: homebrew.html  index.html  pipx.html  pixi-global.html
docs/_build/dirhtml/tutorials/coming-from-pipx/: index.html
docs/_build/dirhtml/tutorials/first-tool/: index.html
docs/guides/: managing-tools.md  sharing-manifests.md
docs/reference/: cli.md
docs/tutorials/: first-tool.md  run-without-installing.md
docs/tutorials/coming-from/: homebrew.md  index.md  pixi-global.md
recipe/: recipe.yaml
tests/: conftest.py  test_binaries.py  test_envs.py  test_manifest.py  test_models.py  test_paths.py  test_trampolines.py
tests/cli/: conftest.py  test_add.py  test_edit.py  test_ensurepath.py  test_expose.py  test_install.py  test_list.py  test_pin.py  test_remove.py  test_run.py  test_status.py  test_sync.py  test_tree.py  test_uninstall.py  test_update.py
