[build-system]
requires = ["hatchling>=1.12.2", "hatch-vcs>=0.2.0"]
build-backend = "hatchling.build"

[project]
name = "conda-global"
description = "Global tool installation for conda — install CLI tools into isolated environments and make them available on PATH via trampolines"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Jannis Leidel", email = "jannis@leidel.info" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "conda >=25.1",
  "conda-trampoline",
  "tomlkit >=0.13",
  "rich >=13.0",
  "userpath >=1.9",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/jezdez/conda-global"

[project.scripts]
cg = "conda_global.__main__:main"

[project.entry-points.conda]
"conda-global" = "conda_global.plugin"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "conda_global/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["conda_global"]

[tool.ruff]
line-length = 99
target-version = "py310"
exclude = ["conda_global/_version.py"]

[tool.ruff.lint]
flake8-type-checking = {exempt-modules = [], strict = true}
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "I",    # isort
  "ISC",  # flake8-implicit-str-concat
  "RUF100",  # unused noqa directive
  "T10",  # flake8-debugger
  "TCH",  # flake8-type-checking
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -v"

[tool.coverage.run]
source = ["conda_global"]
branch = true
omit = ["conda_global/_version.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
show_missing = true
skip_covered = true
sort = "Miss"

[tool.ty.environment]
python-version = "3.10"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64", "linux-aarch64"]

[tool.pixi.dependencies]
python = ">=3.10"
conda = ">=25.1"
rust = ">=1.85"

[tool.pixi.pypi-dependencies]
conda-trampoline = { path = "packages/conda-trampoline" }
conda-global = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
ruff = ">=0.9"
ty = ">=0.0.1a7"
pre-commit = ">=4.0"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.0"
pytest-cov = ">=4.0"
tomlkit = ">=0.13"
rich = ">=13.0"
userpath = ">=1.9"

[tool.pixi.feature.docs.dependencies]
sphinx = ">=7.0"
conda-sphinx-theme = ">=0.2"
myst-parser = ">=3.0"
sphinx-design = ">=0.6"
sphinx-copybutton = ">=0.5"

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.pixi.tasks]
build = "cargo build --release --manifest-path packages/conda-trampoline/Cargo.toml"
build-debug = "cargo build --manifest-path packages/conda-trampoline/Cargo.toml"
lint = { cmd = "ruff check conda_global tests", description = "Check code style" }
format = { cmd = "ruff format conda_global tests", description = "Auto-format code" }
format-check = { cmd = "ruff format --check conda_global tests", description = "Verify formatting" }
typecheck = { cmd = "ty check conda_global", description = "Run type checker" }
test = { cmd = "pytest", description = "Run test suite" }
test-cov = { cmd = "pytest --cov --cov-report=term-missing --cov-report=html --cov-report=xml", description = "Tests with coverage" }
clippy = { cmd = "cargo clippy --manifest-path packages/conda-trampoline/Cargo.toml --all-targets -- -D warnings", description = "Rust linter" }

[tool.pixi.feature.docs.tasks]
docs = { cmd = "sphinx-build -b dirhtml docs docs/_build/dirhtml", description = "Build documentation" }

[tool.pixi.tasks.check]
depends-on = ["lint", "format-check", "typecheck", "clippy"]
description = "Run all checks"

[tool.pixi.tasks.demos]
cmd = """bash -c 'if [ -n "$1" ]; then vhs "demos/$1.tape"; else for tape in demos/*.tape; do [[ "$(basename "$tape")" == _* ]] && continue; vhs "$tape"; done; fi' -- {{ name }}"""
args = [{ arg = "name", default = "" }]
description = "Record demo GIFs"
